refactored many fils and complete post controller logics